# forum-app-dioxus-sample

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
src/: components.rs  lib.rs  main.rs  routes.rs
src/frontend/: components.rs
