[package]
name = "forum-app-dioxus-sample"
version = "0.1.0"
authors = ["Soc Virnyl Estela <contact@uncomfyhalomacro.pl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
