[package]
name = "forum-app-dioxus-sample"
version = "0.1.0"
authors = ["Soc Virnyl Estela <contact@uncomfyhalomacro.pl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Will move over to separate backend and frontend in the future
age = { version = "0.10.0", features = ["async"] }
dioxus = { version = "0.6.0-alpha.2", features = ["web", "router"] }
# Debug
dioxus-logger = "0.5.1"
sqlx = "0.8.0"
tokio = { version = "1.39.2", features = ["full"] }
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
